# vk-scuffed

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  asan.supp  config.json  copy-resources.cmake  shell.nix
assets/materials/: default.json  notdefault.json
assets/shaders/: shader.vert
src/: CMakeLists.txt  main.cpp  sc_config.cpp  sc_config.hpp
src/assets/: CMakeLists.txt  sc_assets.cpp  sc_assets.hpp  sc_material.cpp  sc_material.hpp  sc_resource.hpp  sc_shader.cpp  sc_shader.hpp
src/engine/: CMakeLists.txt  pipeline_factory.cpp  pipeline_factory.hpp  queue_family_indices.hpp  swap_chain_support.cpp  swap_chain_support.hpp  swap_chain_wrapper.cpp  swap_chain_wrapper.hpp  vertex.cpp  vertex.hpp  vk_engine.cpp  vk_engine.hpp  vk_types.hpp  vk_utils.cpp  vk_utils.hpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkanengine.cpp  vulkanengine.hpp
src/engine/utils/: CMakeLists.txt  queue_family_indices.cpp  queue_family_indices.hpp  swap_chain_support.cpp  swap_chain_support.hpp
src/game/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  game.cpp  game.hpp  sc_callbacks.cpp  sc_callbacks.hpp  sc_game.cpp  sc_game.hpp  window.cpp  window.hpp
src/renderer/: CMakeLists.txt  sc_renderer.cpp  sc_renderer.hpp  sc_window.cpp  sc_window.hpp
src/renderer/assets/: CMakeLists.txt  sc_assets.cpp  sc_assets.hpp  sc_material.cpp  sc_material.hpp
src/utils/: CMakeLists.txt  constants.cpp  constants.hpp  include_boost_json.cpp  include_glfw.hpp  include_vulkan.hpp  json_utils.cpp  json_utils.hpp
